test/Fail/Issue394-3.err
Issue394-3.agda:5.36: error: [ParseError]
Malformed syntax declaration: syntax must use holes exactly once
